# TaskManager

./: .gitignore  pyproject.toml
app/: config.py  database.py  enums.py
app/models/: __init__.py  association.py  comment.py  notification.py  project.py  task.py  user.py
app/schemas/: comment.py  notification.py  project.py  task.py  user.py
