[project]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "Artyom Denisov",email = "artem_denisov_2005@inbox.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
